@@ -20,6 +20,7 @@ Revision history for Date-Easy
 
     [Docs]
     * Added "Language" section to "Limitations"
+    * Added "Inspiration and Credits" section to POD
 
 0.03      2017-02-21 19:45:46-08:00 America/Los_Angeles
 
